syntax = "proto3";
option go_package = ".;pbgo";
import "Account.proto";
import "User.proto";
import "PostMessage.proto";
import "Edge.proto";

message Agreement {
    int32 cmd = 1;
    
    int32 service = 2;
    
    int32 return_code = 3;
    
    string msg = 4;

    int32 cid = 5;

    repeated Account accounts = 6;

    repeated User users = 7;

    repeated PostMessage post_messages = 8;
    
    string cipher = 9;

    int32 identity = 10;

    repeated Edge edges = 11;

    int64 start_utc = 12;

    int64 stop_utc = 13;
}